# model-shelf

./: README.md  pyproject.toml
.pi-subagents/artifacts/: 0f0250a1-dcac-42ba-a559-5f65a4b296c3_reviewer_2_input.md  0f0250a1-dcac-42ba-a559-5f65a4b296c3_reviewer_2_meta.json  0f0250a1-dcac-42ba-a559-5f65a4b296c3_reviewer_2_output.md  0f0250a1-dcac-42ba-a559-5f65a4b296c3_reviewer_2_transcript.jsonl  0f0250a1-dcac-42ba-a559-5f65a4b296c3_reviewer_3_input.md  0f0250a1-dcac-42ba-a559-5f65a4b296c3_reviewer_3_meta.json  0f0250a1-dcac-42ba-a559-5f65a4b296c3_reviewer_3_output.md  0f0250a1-dcac-42ba-a559-5f65a4b296c3_reviewer_3_transcript.jsonl  0f0250a1-dcac-42ba-a559-5f65a4b296c3_scout_0_input.md  0f0250a1-dcac-42ba-a559-5f65a4b296c3_scout_0_meta.json  0f0250a1-dcac-42ba-a559-5f65a4b296c3_scout_0_output.md  0f0250a1-dcac-42ba-a559-5f65a4b296c3_scout_0_transcript.jsonl  0f0250a1-dcac-42ba-a559-5f65a4b296c3_worker_1_input.md  0f0250a1-dcac-42ba-a559-5f65a4b296c3_worker_1_meta.json  0f0250a1-dcac-42ba-a559-5f65a4b296c3_worker_1_output.md  0f0250a1-dcac-42ba-a559-5f65a4b296c3_worker_1_transcript.jsonl  15b25cc2-2176-4b37-990b-149612d797f7_worker_input.md  15b25cc2-2176-4b37-990b-149612d797f7_worker_meta.json  15b25cc2-2176-4b37-990b-149612d797f7_worker_transcript.jsonl  18e7bcf6-e6a9-4071-a131-f5cb3d9405ce_reviewer_2_input.md  18e7bcf6-e6a9-4071-a131-f5cb3d9405ce_reviewer_3_input.md  (+107 more)
.serena/: project.yml
scripts/: model-shelf-migrate
tests/: test_audit.py  test_dedup.py  test_gc.py  test_import.py  test_manifest.py  test_migrate.py  test_quant.py  test_remove.py  test_resolver.py
(+30 files in other folders)
